--- a/StyleSheet/AttendanceReport.css
+++ b/StyleSheet/AttendanceReport.css
@@ -30,11 +30,15 @@
     box-sizing: border-box; 
     background-color: #f4f7f6;
 }
+
 .top-header {
-    margin-bottom: 25px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center; 
+    margin-bottom: 30px;
+    width: 100%;
+    padding-bottom: 15px;
+    border-bottom: 1px solid rgba(0,0,0,0.05);
 }
 
 .filters {
@@ -201,6 +205,7 @@
         }
 
         .val-blue { color: #0055aa; font-weight: bold; }
+
 
 
 
